[package]
name = "wagmi_staking"
version = "0.1.0"
authors = ["solomon"]
edition = "2018"
description = "Null"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cosmwasm-bignumber = { version="2.2.0" }
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
terra-cosmwasm = "2.2.0"
schemars = "0.8.3"
cw-storage-plus = "0.9.1"
cw721 = "0.9.1"
cw721-base="0.9.1"
wagmi-protocol = { version = "0.1.0", path = "../../packages/wagmi_protocol" }
